--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.24.0",
     "react": "^17.0.0",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
